Add endpoints for fetching affiliations by hco/hcp
