# api/data/views.py
@@ -6,6 +6,7 @@ from rest_framework.decorators import api_view, authentication_classes, permissi
 from rest_framework.response import Response
 from rest_framework.authentication import SessionAuthentication, TokenAuthentication
 from rest_framework.permissions import IsAuthenticated
+from django.db.models import Q
 
 RESPONSE_HEADERS = {
     'Content-Type': 'application/json'
@@ -199,3 +200,45 @@ def get_healthcare_provider_address_by_id(request, provider_id, address_id):
     address = serializer.data[0]['addresses'][0]
 
     return Response(address, status=200, headers=RESPONSE_HEADERS)
+
+
+@api_view(['GET'])
+@authentication_classes([SessionAuthentication, TokenAuthentication])
+@permission_classes([IsAuthenticated])
+def get_healthcare_provider_affiliations(request, provider_id):
+    query_set = HealthCareProvider.objects.filter(id=provider_id)
+    response = HealthCareProviderSerializer(query_set, many=True)
+    if not len(response.data):
+        raise Http404("Heathcare provider does not exist")
+
+    hcp = dict(response.data[0])
+    query_set = Affiliation.objects.filter(Q(parent_hcp_link__id=hcp['id']) | Q(child_hcp_link__id=hcp['id']))
+
+    paginator = LimitOffsetPagination()
+    data = paginator.paginate_queryset(query_set, request)
+    
+    serializer = AffiliationSerializer(data, many=True)
+    paginated_data = paginator.get_paginated_response(serializer.data)
+    
+    return build_return_response(paginated_data)
+
+
+@api_view(['GET'])
+@authentication_classes([SessionAuthentication, TokenAuthentication])
+@permission_classes([IsAuthenticated])
+def get_healthcare_organization_affiliations(request, organization_id):
+    query_set = HealthCareOrganization.objects.filter(id=organization_id)
+    response = HealthCareOrganizationSerializer(query_set, many=True)
+    if not len(response.data):
+        raise Http404("Heathcare organization does not exist")
+
+    hco = dict(response.data[0])
+    query_set = Affiliation.objects.filter(Q(parent_hco_link__id=hco['id']) | Q(child_hco_link__id=hco['id']))
+
+    paginator = LimitOffsetPagination()
+    data = paginator.paginate_queryset(query_set, request)
+    
+    serializer = AffiliationSerializer(data, many=True)
+    paginated_data = paginator.get_paginated_response(serializer.data)
+    
+    return build_return_response(paginated_data)
